[gd_scene load_steps=21 format=3 uid="uid://b0no58d1y44c4"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_envdg"]
[ext_resource type="Texture2D" uid="uid://cf24sdexc2bd1" path="res://assets/sprites/shade_idle.png" id="2_d5y7b"]
[ext_resource type="AudioStream" uid="uid://diwc70mdqqiua" path="res://assets/audio/sfx/pickupHealth.mp3" id="3_7c1x7"]
[ext_resource type="AudioStream" uid="uid://d2jjuvhx572av" path="res://assets/audio/sfx/pickupAura.mp3" id="4_e6bhj"]
[ext_resource type="AudioStream" uid="uid://74c868mibah0" path="res://assets/audio/sfx/pickupShadow.mp3" id="5_uidrs"]
[ext_resource type="AudioStream" uid="uid://dipg8ls5stxbo" path="res://assets/audio/sfx/playerAuraHit_1.mp3" id="6_l53at"]
[ext_resource type="AudioStream" uid="uid://uwmp4hirc7v" path="res://assets/audio/sfx/enemyHit.mp3" id="7_pvfht"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j87w6"]
atlas = ExtResource("2_d5y7b")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwtdb"]
atlas = ExtResource("2_d5y7b")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akdm2"]
atlas = ExtResource("2_d5y7b")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmuaw"]
atlas = ExtResource("2_d5y7b")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3ds7"]
atlas = ExtResource("2_d5y7b")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_krqvv"]
atlas = ExtResource("2_d5y7b")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucslg"]
atlas = ExtResource("2_d5y7b")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r2rw"]
atlas = ExtResource("2_d5y7b")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jek56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j87w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwtdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akdm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmuaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3ds7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krqvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucslg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r2rw")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_tawho"]
offsets = PackedFloat32Array(0.506494, 0.688312)
colors = PackedColorArray(1, 1, 1, 1, 0.329412, 0.329412, 0.329412, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2ygnd"]
gradient = SubResource("Gradient_tawho")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_uwdjj"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2pfb1"]
radius = 81.0247

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_mask = 30
motion_mode = 1
script = ExtResource("1_envdg")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jek56")
animation = &"idle"
autoplay = "idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.7, 0.7)
shadow_enabled = true
texture = SubResource("GradientTexture2D_2ygnd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uwdjj")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 14
input_pickable = false
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 10.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2pfb1")

[node name="AuraPulseTimer" type="Timer" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="PickupHealth" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_7c1x7")

[node name="PickupAura" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_e6bhj")

[node name="PickupShadow" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_uidrs")

[node name="DamageTaken" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_l53at")

[node name="DamageDealt" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_pvfht")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AuraPulseTimer" to="." method="_on_aura_pulse_timer_timeout"]
